lambda-appsync-proc/tests/fail/invalid_field_type_override.stderr
error: No field `inexistant` in `Player`
 --> tests/fail/invalid_field_type_override.rs:7:28
  |
7 |     type_override = Player.inexistant: String,
  |                            ^^^^^^^^^^
